# 需求的最低cmake程序版本
cmake_minimum_required(VERSION 3.12)

# 本工程的名字
project(Graphic)

# 本工程支持的C++版本
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(application)
add_subdirectory(gpu)

# 本工程主程序文件及输出程序名称
add_executable(softRenderer "main.cpp")
add_executable(testMath "testMath.cpp")

target_link_libraries(softRenderer applicationLib gpuLib)